# basic-ui-template

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  vcpkg.json
inc/: basic-scrollbox.h  basic-textbox.h  basic-window.h  choice.h  config.h  constants.h  examples.h  feed.h  glew-helpers.h  glyph-cache.h  help.h  renderer.h  svg.h  timers.h  types.h  ui-common.h  utf-8.h  util.h  vec.h  window-theming.h
shaders/: 1-1-scale-transform.vert  basic-fade.frag  basic-hsv.frag  basic-texture-blend.frag  basic_color.frag  crt-easymode-blur-horiz.frag  crt-easymode-blur-vert.frag  icon.frag  no-transform.vert  solid-circle.frag  text.frag  transform.vert
src/: basic-scrollbox.cpp  basic-textbox.cpp  basic-window.cpp  choice.cpp  config.cpp  examples.cpp  feed.cpp  glyph-cache.cpp  help.cpp  main.cpp  renderer.cpp  svg.cpp  utf-8.cpp  util.cpp  window-theming.cpp
